; ModuleID = '/home/carl/AnghaBench/xLua/build/lua-5.1.5/src/extr_lbaselib.c_luaB_getfenv.c'
source_filename = "/home/carl/AnghaBench/xLua/build/lua-5.1.5/src/extr_lbaselib.c_luaB_getfenv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LUA_GLOBALSINDEX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @luaB_getfenv to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @luaB_getfenv(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = call i32 @getfunc(i32* %3, i32 1)
  %5 = load i32*, i32** %2, align 8
  %6 = call i64 @lua_iscfunction(i32* %5, i32 -1)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %12

8:                                                ; preds = %1
  %9 = load i32*, i32** %2, align 8
  %10 = load i32, i32* @LUA_GLOBALSINDEX, align 4
  %11 = call i32 @lua_pushvalue(i32* %9, i32 %10)
  br label %15

12:                                               ; preds = %1
  %13 = load i32*, i32** %2, align 8
  %14 = call i32 @lua_getfenv(i32* %13, i32 -1)
  br label %15

15:                                               ; preds = %12, %8
  ret i32 1
}

declare dso_local i32 @getfunc(i32*, i32) #1

declare dso_local i64 @lua_iscfunction(i32*, i32) #1

declare dso_local i32 @lua_pushvalue(i32*, i32) #1

declare dso_local i32 @lua_getfenv(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
